--- a/src/app/component/header.component.css
+++ b/src/app/component/header.component.css
@@ -15,6 +15,17 @@
   left: 0;
 }
 
+.navbar-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 50;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  height: 10%; /* Ensure this matches the height set in the HTML */
+}
+
 .sidebar-header {
   display: flex;
   align-items: center;
