--- a/src/app/component/role-menu.component.html
+++ b/src/app/component/role-menu.component.html
@@ -4,113 +4,149 @@
     <button mat-raised-button color="primary" (click)="openDetailRoleDialog()">View Detail Role</button>
   </div>
 
-<!-- Dialog -->
-<ng-template #confirmationDialog let-data>
-  <h2 mat-dialog-title>Role Assignment</h2>
-  <mat-dialog-content>You are about to assign the {{data.role}} role to {{data.row.username}}</mat-dialog-content>
-  <mat-dialog-actions>
-    <button mat-button (click)="confirmRoleChange(data.row, data.role)" mat-dialog-close>Yes</button>
-  </mat-dialog-actions>
-</ng-template>
+  <!-- Dialog -->
+  <ng-template #confirmationDialog let-data>
+    <h2 mat-dialog-title>Role Assignment</h2>
+    <mat-dialog-content>You are about to assign the {{data.role}} role to {{data.row.username}}</mat-dialog-content>
+    <mat-dialog-actions>
+      <button mat-button (click)="confirmRoleChange(data.row, data.role)" mat-dialog-close>Yes</button>
+    </mat-dialog-actions>
+  </ng-template>
 
-<!-- Detail Role Dialog -->
-<ng-template #detailRoleDialog>
-  <h2 mat-dialog-title>Detail Role</h2>
-  <mat-dialog-content>
-    <mat-radio-group aria-label="Select Role">
-      <mat-radio-button *ngFor="let role of detailRoleDataSource.data" 
-                        [value]="role.role" 
-                        (change)="onRoleChange(role)">
-        {{ role.role }}
-      </mat-radio-button>
-    </mat-radio-group>
+  <!-- Detail Role Dialog Template -->
+  <ng-template #detailRoleDialog>
+    <h2 mat-dialog-title>Detail Role</h2>
+    <mat-dialog-content>
+      <mat-tab-group>
+        <!-- Super Admin Tab -->
+        <mat-tab label="Super Admin">
+          <ng-template matTabContent>
+            <table mat-table [dataSource]="superAdminFeatures" class="mat-elevation-z8">
+              <ng-container matColumnDef="feature">
+                <th mat-header-cell *matHeaderCellDef>Account has access to both features.</th>
+                <td mat-cell *matCellDef="let feature">
+                  <mat-checkbox [checked]="feature.enabled" disabled>
+                    {{ feature.name }}
+                  </mat-checkbox>
+                </td>
+              </ng-container>
+              <tr mat-header-row *matHeaderRowDef="featureDisplayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: featureDisplayedColumns;"></tr>
+            </table>
+          </ng-template>
+        </mat-tab>
+        <!-- Staff Admin Tab -->
+        <mat-tab label="Staff Admin">
+          <ng-template matTabContent>
+            <table mat-table [dataSource]="staffAdminFeatures" class="mat-elevation-z8">
+              <ng-container matColumnDef="feature">
+                <th mat-header-cell *matHeaderCellDef>Account has access only to the Employee List feature.</th>
+                <td mat-cell *matCellDef="let feature">
+                  <mat-checkbox [checked]="feature.enabled" disabled>
+                    {{ feature.name }}
+                  </mat-checkbox>
+                </td>
+              </ng-container>
+              <tr mat-header-row *matHeaderRowDef="featureDisplayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: featureDisplayedColumns;"></tr>
+            </table>
+          </ng-template>
+        </mat-tab>
+        <!-- Control Admin Tab -->
+        <mat-tab label="Control Admin">
+          <ng-template matTabContent>
+            <table mat-table [dataSource]="controlAdminFeatures" class="mat-elevation-z8">
+              <ng-container matColumnDef="feature">
+                <th mat-header-cell *matHeaderCellDef>Account has access only to the Role Menu Function feature.</th>
+                <td mat-cell *matCellDef="let feature">
+                  <mat-checkbox [checked]="feature.enabled" disabled>
+                    {{ feature.name }}
+                  </mat-checkbox>
+                </td>
+              </ng-container>
+              <tr mat-header-row *matHeaderRowDef="featureDisplayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: featureDisplayedColumns;"></tr>
+            </table>
+          </ng-template>
+        </mat-tab>
+        <!-- User Tab -->
+        <mat-tab label="User">
+          <ng-template matTabContent>
+            <table mat-table [dataSource]="userFeatures" class="mat-elevation-z8">
+              <ng-container matColumnDef="feature">
+                <th mat-header-cell *matHeaderCellDef>Account has no access to either feature.</th>
+                <td mat-cell *matCellDef="let feature">
+                  <mat-checkbox [checked]="feature.enabled" disabled>
+                    {{ feature.name }}
+                  </mat-checkbox>
+                </td>
+              </ng-container>
+              <tr mat-header-row *matHeaderRowDef="featureDisplayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: featureDisplayedColumns;"></tr>
+            </table>
+          </ng-template>
+        </mat-tab>
+      </mat-tab-group>
+    </mat-dialog-content>
+    <mat-dialog-actions>
+      <button mat-button mat-dialog-close>Close</button>
+    </mat-dialog-actions>
+  </ng-template>
 
-    <div *ngIf="selectedRole">
-      <!-- <h6>Features for {{ selectedRole.role }}</h6> -->
-       <br>
-      <table mat-table [dataSource]="featureDataSource" class="mat-elevation-z8">
-        <ng-container matColumnDef="feature">
-          <th mat-header-cell *matHeaderCellDef>Feature</th>
-          <td mat-cell *matCellDef="let feature">
-            <mat-checkbox [checked]="feature.enabled" disabled>
-              {{ feature.name }}
-            </mat-checkbox>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="featureDisplayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: featureDisplayedColumns;"></tr>
-      </table>
-
-      <div class="role-description">
-        <p *ngIf="selectedRole.role === 'User'">Account has no access to either feature.</p>
-        <p *ngIf="selectedRole.role === 'Super Admin'">Account has access to both features.</p>
-        <p *ngIf="selectedRole.role === 'Control Admin'">Account has access only to the Role Menu Function feature.</p>
-        <p *ngIf="selectedRole.role === 'Staff Admin'">Account has access only to the Employee List feature.</p>
-      </div>
-    </div>
-  </mat-dialog-content>
-  <mat-dialog-actions>
-    <button mat-button mat-dialog-close>Close</button>
-  </mat-dialog-actions>
-</ng-template>
-
-<!-- User Role Table -->
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <!-- ID Column -->
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef>No</th>
-    <td mat-cell *matCellDef="let element">{{element.id}}</td>
-  </ng-container>
-
-  <!-- Username Column -->
-  <ng-container matColumnDef="username">
-    <th mat-header-cell *matHeaderCellDef>Username</th>
-    <td mat-cell *matCellDef="let element">{{element.username}}</td>
-  </ng-container>
-
-  <!-- User Role Column -->
-  <ng-container matColumnDef="user">
-    <th mat-header-cell *matHeaderCellDef>User</th>
-    <td mat-cell *matCellDef="let row">
-      <mat-radio-group (change)="onRoleSelectionChange(row, Role.USER)">
-        <mat-radio-button value="1" [checked]="row.roles[Role.USER]"></mat-radio-button>
-      </mat-radio-group>
-    </td>
-  </ng-container>
-
-  <!-- Super Admin Role Column -->
-  <ng-container matColumnDef="superAdmin">
-    <th mat-header-cell *matHeaderCellDef>Super Admin</th>
-    <td mat-cell *matCellDef="let row">
-      <mat-radio-group (change)="onRoleSelectionChange(row, Role.SUPER_ADMIN)">
-        <mat-radio-button value="2" [checked]="row.roles[Role.SUPER_ADMIN]"></mat-radio-button>
-      </mat-radio-group>
-    </td>
-  </ng-container>
-
-  <!-- Staff Admin Role Column -->
-  <ng-container matColumnDef="staffAdmin">
-    <th mat-header-cell *matHeaderCellDef>Staff Admin</th>
-    <td mat-cell *matCellDef="let row">
-      <mat-radio-group (change)="onRoleSelectionChange(row, Role.STAFF_ADMIN)">
-        <mat-radio-button value="3" [checked]="row.roles[Role.STAFF_ADMIN]"></mat-radio-button>
-      </mat-radio-group>
-    </td>
-  </ng-container>
-
-  <!-- Control Admin Role Column -->
-  <ng-container matColumnDef="controlAdmin">
-    <th mat-header-cell *matHeaderCellDef>Control Admin</th>
-    <td mat-cell *matCellDef="let row">
-      <mat-radio-group (change)="onRoleSelectionChange(row, Role.CONTROL_ADMIN)">
-        <mat-radio-button value="4" [checked]="row.roles[Role.CONTROL_ADMIN]"></mat-radio-button>
-      </mat-radio-group>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-
+  <section class="example-container mat-elevation-z8" tabindex="0">
+    <!-- User Role Table -->
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <!-- NO Column -->
+      <ng-container matColumnDef="no">
+        <th mat-header-cell *matHeaderCellDef>No</th>
+        <td mat-cell *matCellDef="let element; let index = index">
+          {{index + 1}}
+        </td>
+      </ng-container>
+      <!-- Username Column -->
+      <ng-container matColumnDef="username">
+        <th mat-header-cell *matHeaderCellDef>Username</th>
+        <td mat-cell *matCellDef="let element">{{element.username}}</td>
+      </ng-container>
+      <!-- User Role Column -->
+      <ng-container matColumnDef="user">
+        <th mat-header-cell *matHeaderCellDef>User</th>
+        <td mat-cell *matCellDef="let row">
+          <mat-radio-group (change)="onRoleSelectionChange(row, Role.USER)">
+            <mat-radio-button value="1" [checked]="row.roles[Role.USER]"></mat-radio-button>
+          </mat-radio-group>
+        </td>
+      </ng-container>
+      <!-- Super Admin Role Column -->
+      <ng-container matColumnDef="superAdmin">
+        <th mat-header-cell *matHeaderCellDef>Super Admin</th>
+        <td mat-cell *matCellDef="let row">
+          <mat-radio-group (change)="onRoleSelectionChange(row, Role.SUPER_ADMIN)">
+            <mat-radio-button value="2" [checked]="row.roles[Role.SUPER_ADMIN]"></mat-radio-button>
+          </mat-radio-group>
+        </td>
+      </ng-container>
+      <!-- Staff Admin Role Column -->
+      <ng-container matColumnDef="staffAdmin">
+        <th mat-header-cell *matHeaderCellDef>Staff Admin</th>
+        <td mat-cell *matCellDef="let row">
+          <mat-radio-group (change)="onRoleSelectionChange(row, Role.STAFF_ADMIN)">
+            <mat-radio-button value="3" [checked]="row.roles[Role.STAFF_ADMIN]"></mat-radio-button>
+          </mat-radio-group>
+        </td>
+      </ng-container>
+      <!-- Control Admin Role Column -->
+      <ng-container matColumnDef="controlAdmin">
+        <th mat-header-cell *matHeaderCellDef>Control Admin</th>
+        <td mat-cell *matCellDef="let row">
+          <mat-radio-group (change)="onRoleSelectionChange(row, Role.CONTROL_ADMIN)">
+            <mat-radio-button value="4" [checked]="row.roles[Role.CONTROL_ADMIN]"></mat-radio-button>
+          </mat-radio-group>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </section>
+  
 </div>
