--- a/src/app/component/header.component.html
+++ b/src/app/component/header.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-white p-5 shadow-md" style="height: 10%;">
+<nav class="bg-white p-5 shadow-md sticky top-0 z-50" style="height: 10%;">
   <div class="container mx-auto flex justify-between items-center h-full">
     <div class="flex items-center h-full">
       <button mat-icon-button (click)="toggleSidebar()" class="mr-3">
