--- a/src/app/component/profile.component.html
+++ b/src/app/component/profile.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen flex flex-col items-center justify-center p-8 bg-gradient-to-b from-blue-100 to-white">
+<div class="min-h-screen flex flex-col items-center justify-center p-8">
   <br>
   <h1 class="text-3xl font-bold mb-8">User Profile</h1>
   <br>
