--- a/src/app/component/register.component.html
+++ b/src/app/component/register.component.html
@@ -4,7 +4,7 @@
     <mat-vertical-stepper [linear]="true" #stepper>
       <mat-step [stepControl]="firstFormGroup">
         <form [formGroup]="firstFormGroup">
-          <ng-template matStepLabel>Fill out your name</ng-template>
+          <ng-template matStepLabel>Fill out your username</ng-template>
           <mat-form-field appearance="fill" class="w-full">
             <mat-label>Username</mat-label>
             <input matInput formControlName="username" required>
